style.css
body {
  background-color: black;
  font-family: 'Lato', sans-serif;
  color: white;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: ;
  width: 100vw;
  position: fixed;
  top: 0;
  background-color: rgba(255, 0, 0, 1);
}

h1 {
  font-size: 20px;
  padding: 0 10px;
}

header nav ul {
  display: flex;
  align-items: baseline;
  list-style-type: none;
  margin-right: 1vw;
}

.form-container {
  max-width: 60vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 30px;
}

.form-container h2 {
  text-align: center;
}

#form {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  flex-grow: 
}

.nav-link {
  padding: 5px;
  text-decoration: none;
  color: black;
}

.nav-link:hover {
  color: white;
}

.footer {
  width: 70vw;
  height: 50px;
  display: flex;
  justify-content: flex-end;
  margin: 1vw;
  background-color: red;
}

.details-container {
  max-width: 60vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
}

.details-container div h2 {
  margin-bottom: 0;
  color: rgba(255, 0, 0, 1);
}

.card {
  width: 20vw;
  display: flex;
  flex-direction: column;
  border-style: solid;
  border-width: 2px;
  border-color: #aaa;
  margin: 2vw 1vw;
  border-color: rgb(255, 0, 0);
  border-radius: 4px; 
}

.guitar-prices {
  width: 100vw;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin-top: 60px;
}

.card .header {
  background-color: red;
  width: 100%;
  height: 20%;
  flex: 0 0 10px;
  text-align: center;
}

.card .content {
  padding: 20px;
  flex: 4 3 50px;  
}

.card .btn {
  flex: 0 0 10px;
  text-align: center;
}

.card .header h2 {
  color: black;
  margin: 0;
}

h2 {
  color: rgba(255, 0, 0, 1);
}

input {
  margin: 5px;
  padding: 0.5vw;
}

input[type="email"]{
  border-radius: 2px;
  border-color: rgb(255, 0, 0);
  background-color: rgba(255, 0, 0, 0.2);
  color: white;
}

.btn {
  border-style: solid;
  border-color: rgb(255, 0, 0);
  border-radius: 2px;
  background-color: rgb(255, 0, 0);
  color: black;
}

.btn:hover {
  color: white;
  cursor: pointer;
}

iframe {
  border-color: rgb(255, 0, 0);
  border-radius: 4px; 
  margin-top: 40px;
}

@media (max-width: 640px) {
  .card {
    width: 80vw;
    height: 80vw;
  }
  
  .footer {
    width: 100vw;
  }
}

